# rosx

./: .gitignore  AGENTS.md  ANALYSIS.md  Cargo.toml  DEVELOPMENT_LOG.md  GEMINI.md  INTERRUPT_DRIVEN_CONTEXT_SWITCH_REFACTORING.md  M68K_PORT_PLAN.md  README.md  X86_32_PORT_PLAN.md  plan.md
.cargo/: config.toml
.github/workflows/: build-artifacts.yml  ci.yml
apps/conway/: Cargo.toml
apps/conway/.cargo/: config.toml
apps/conway/src/: main.rs
apps/dummy/: Cargo.toml
apps/dummy/src/: app.rs  lib.rs
apps/file_test/: Cargo.toml
apps/file_test/src/: app.rs  lib.rs
apps/hello_elf/: Cargo.toml
apps/hello_elf/.cargo/: config.toml
apps/hello_elf/src/: main.rs
apps/shell/: Cargo.toml
apps/shell/src/: command.rs  lib.rs  shell.rs
apps/snake/: Cargo.toml  linker.ld
apps/snake/.cargo/: config.toml
apps/snake/src/: main.rs
apps/test_suite/: Cargo.toml
apps/test_suite/src/: allocation_test.rs  app.rs  context_switching.rs  lib.rs  random.rs  random_service_test.rs
apps/tetris/: Cargo.toml
apps/tetris/.cargo/: config.toml
apps/tetris/src/: main.rs
arch/m68k/: Cargo.toml  build.rs  build.sh  linker.ld  rosx-m68k.json  run.sh  rust-toolchain.toml
arch/m68k/.cargo/: config.toml
arch/m68k/src/: ansi_parser.rs  boot.S  cpu.rs  elf_arch.rs  goldfish_tty.rs  interrupts.rs  main.rs  serial.rs  swap_context.S
arch/x86_32/: Cargo.toml  build-image.sh  build.rs  linker.ld  rosx-i686-user.json  rosx-i686.json  run.sh
arch/x86_32/.cargo/: config.toml
arch/x86_32/src/: boot.S  cpu.rs  debug_console.rs  elf_arch.rs  interrupts.rs  main.rs  vga_buffer.rs
arch/x86_64/: Cargo.toml  DEBUG_SETUP.md  debug-qemu.sh  ensure-qemu-running.sh  gdb-init.gdb  rosx-user.json  run.sh  start-qemu-background.sh
arch/x86_64-runner/: Cargo.toml
arch/x86_64-runner/src/: main.rs
arch/x86_64/.cargo/: config.toml
arch/x86_64/runner/.cargo/: config.toml
arch/x86_64/src/: ansi_parser.rs  context_switching.S  cpu.rs  debug_console.rs  elf_arch.rs  framebuffer.rs  idle.rs  interrupts.rs  main.rs  multi_debug.rs  pci.rs  process_initialization.S  rtl8139.rs  syscall.S  terminal_fonts.rs  vga_buffer.rs
collections/: Cargo.toml
collections/src/: circular_queue.rs  generational_arena.rs  lib.rs
docs/: TODO.md  elf-loader-portability.md  ipc-design.md  osdev-megadrive.md  user_space_threads_analysis.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  bitmap_chunk_allocator.rs  chunk_allocator.rs  chunk_tracker.rs  circular_queue.rs  context_switcher.rs  cpu.rs  debug.rs  default_output.rs  elf.rs  file_arena.rs  file_manager.rs  free_list_allocator.rs  function_task.rs  future.rs  generational_arena.rs  generic_arena.rs  growing_circular_queue.rs  ipc.rs  kconfig.rs  kernel.rs  kernel_cell.rs  kernel_services.rs  keyboard.rs  lib.rs  main_thread.rs  messages.rs  messaging.rs  mlfq_scheduler.rs  once.rs  panic.rs  pipe.rs  random_service.rs  runnable.rs  scheduler.rs  simple_scheduler.rs  state.rs  syscall.rs  task.rs  task_arena.rs  (+7 more)
kernel/src/elf/: arch.rs  mod.rs  structs.rs
kernel/src/ipc/: ipc_manager.rs  ipc_server.rs  mod.rs  random_gen_server.rs
kernel/src/memory/: allocator.rs  bitmap_chunk_allocator.rs  free_list_allocator.rs  memory_manager.rs  mod.rs  userspace_allocator.rs
kernel/src/scheduler/: fifo_scheduler.rs  main_thread.rs  mlfq_scheduler.rs  mod.rs  timer.rs
runner/src/: main.rs
system/: Cargo.toml
system/src/: file.rs  future.rs  generational_arena.rs  ipc.rs  lib.rs  memory.rs  message.rs  syscall_numbers.rs  task_config.rs
usrlib/: Cargo.toml
usrlib/src/: ipc.rs  lib.rs  out.rs  syscall.rs
usrlib/src/arch/: m68k.rs  mod.rs  x86_32.rs  x86_64.rs
