[workspace]
members = [
    "collections",
    "system",
    "kernel",
    "usrlib",
    "arch/x86_64",
    "apps/shell",
    "apps/dummy",
]
exclude = [
    "apps/hello_elf",
    "apps/snake",
    "apps/tetris",
    "apps/conway",
]
resolver = "3"

[workspace.package]
edition = "2024"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
