cargo-features = ["edition2024"]

[workspace]
members = [
    "collections",
    "system",
    "kernel",
    "usrlib",
    "arch/x86_64",
    "arch/x86_32",
    "apps/shell",
    "apps/dummy",
]
exclude = [
    "arch/m68k",
    "apps/hello_elf",
    "apps/snake",
    "apps/tetris",
    "apps/conway",
]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
