[package]
name = "rosx"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../../kernel" }
bootloader = "0.9"
volatile = "0.2.6"
buddy_system_allocator = "0.11.0"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "rosx"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
