[package]
name = "rosx"
version = "0.1.0"
edition.workspace = true

[dependencies]
system = { path = "../../system" }
kernel = { path = "../../kernel" }
usrlib = { path = "../../usrlib" }
shell = { path = "../../apps/shell"}
dummy = { path = "../../apps/dummy"}
test_suite = { path = "../../apps/test_suite"}

bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.10.0"
x86_64 = "0.15"
pic8259 = "0.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "rosx"
bench = false
test = false

[package.metadata.bootimage]
run-args = ["-debugcon", "stdio", "-no-reboot"]
